# swig-files

./: .gitignore  .travis.yml  README.md
cmake-modules/: SWIGCSharp.cmake  SWIGJava.cmake  SWIGPython.cmake  UseCSharp.cmake
python-scripts/header_converter/: documentation.py
python-scripts/swigdoc_converter/: documentation.py
swig-modules/: swig_exceptions.i
swig-modules/java/: java_env.i  java_init.i
travis/: build-test.sh  install-deps.sh
travis/test-code/: CMakeLists.txt  generate_swig_docstrings.py.in  swigtest_common.h  test.sh.in  test_class.hpp  test_fcns.cpp  test_fcns.hpp
travis/test-code/cpp/: CMakeLists.txt  generate_swig_docstrings.py.in  test.sh.in  test_class.cpp
travis/test-code/cpp/csharp/: CMakeLists.txt  CSharpSWIGTest.cs  CSharpSWIGTestCpp.cs  swigtest_csharp.i
travis/test-code/cpp/java/: CMakeLists.txt  JavaSWIGTest.java  JavaSWIGTestCpp.java  java_swigtest_cpp.i  swigtest_java.i
travis/test-code/cpp/python/: CMakeLists.txt  python_swigtest.py  python_swigtest_cpp_test.py  swigtest_python.i
travis/test-code/csharp/: CMakeLists.txt  CSharpSWIGTest.cs
travis/test-code/java/: CMakeLists.txt  JavaSWIGTest.java  swigtest_java.i
travis/test-code/python/: CMakeLists.txt  python_swigtest.py  swigtest_python.i
