#
# Copyright (c) 2016 Nicholas Corgan (n.corgan@gmail.com)
#
# Distributed under the MIT License (MIT) (See accompanying file LICENSE.txt
# or copy at http://opensource.org/licenses/MIT)
#

PROJECT(swig-test C CXX)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/../../cmake-modules;${CMAKE_MODULE_PATH}")

FIND_PACKAGE(Boost REQUIRED)
FIND_PACKAGE(SWIG REQUIRED)
FIND_PACKAGE(CSharp REQUIRED)
FIND_PACKAGE(Java REQUIRED)
FIND_PACKAGE(JNI REQUIRED)

INCLUDE_DIRECTORIES(
    ${CMAKE_SOURCE_DIR}
    ${Boost_INCLUDE_DIRS}
)

IF(SWIG_WRAP_BOOST_EXCEPTIONS)
    ADD_DEFINITIONS(-DSWIG_WRAP_BOOST_EXCEPTIONS)
ENDIF(SWIG_WRAP_BOOST_EXCEPTIONS)

ADD_LIBRARY(swigtest SHARED test_fcns.cpp)

ADD_SUBDIRECTORY(csharp)
ADD_SUBDIRECTORY(java)
